--- a/web/src/Main.css
+++ b/web/src/Main.css
@@ -1,12 +1,157 @@
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    background: white;
-    color: #DB324D;
+    background: #B24592; /* fallback */
+    background: -webkit-linear-gradient(to right, #F15F79, #B24592);  /* fallback 2 */
+    background: linear-gradient(to right, #F15F79, #B24592);
+    color: white;
     text-align: center;
+}
+
+::selection {
+    background: #CB3B76;
+    color: white;
+}
+
+.sans-serif, body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
+.monospace, .code-container input, .code-container p, .ast-child, .ast-node {
+    font-family: 'Fira Code', 'Consolas', monospace;
 }
 
 h1 {
     margin-top: 5rem;
     font-size: 72px;
+}
+
+.code-container {
+    width: 90%;
+    max-width: 720px;
+    margin: 0 auto;
+    height: 56px;
+    border-radius: 4px;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: 0.3s background-color ease, 0.3s box-shadow ease;
+}
+
+.code-container:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.code-container:focus-within {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+.code-container input {
+    padding: 0px 16px;
+    width: 100%; /* fallback */
+    width: calc(100% - 32px);
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+    background-color: transparent;
+    color: #282828;
+    outline: none;
+    transition: 0.3s color ease;
+    color: white;
+    text-align: center;
+}
+
+.code-container input::-webkit-input-placeholder {
+    color:  rgba(255, 255, 255, 0.8);
+}
+
+.code-container input:focus {
+    color: black;
+}
+
+.code-container p {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    white-space: pre;
+    color: transparent;
+    user-select: none;
+    pointer-events: none;
+}
+
+.code-container p .error {
+    border-bottom: 1.75px solid red;
+}
+
+.code-container p .error:empty::after {
+    content: ' '
+}
+
+.ast-view {
+    width: 90%;
+    max-width: 720px;
+    margin: 0 auto;
+}
+
+.ast-node {
+    display: block;
+    padding: 10px;
+    text-align: left;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+    margin-bottom: 5px;
+    height: 20px;
+}
+
+.ast-child {
+    margin-left: 20px;
+    position: relative;
+}
+
+.ast-child[data-symbol] > .ast-node {
+    margin-left: 35px;
+    border-radius: 0 4px 4px 0;
+}
+
+.ast-child::after {
+    position: absolute;
+    left: -12px;
+    top: -5px;
+    border-left: solid 2px rgba(255, 255, 255, 0.6);
+    padding-top: 5px;
+    height: 100%;
+    width: 10px;
+    content: ''
+}
+
+.ast-child:last-child::after {
+    height: 20px;
+}
+
+.ast-child > .ast-node::after {
+    position: absolute;
+    left: -10px;
+    top: -5px;
+    border-bottom: solid 2px rgba(255, 255, 255, 0.6);
+    padding-top: 5px;
+    height: 100%;
+    height: 18px;
+    width: 10px;
+    content: ''
+}
+
+.ast-child[data-symbol]::before {
+    position: absolute;
+    left: 0;
+    padding: 10px 0;
+    width: 35px;
+    height: 20px;
+    border-radius: 4px 0 0 4px;
+    background-color: rgba(255, 255, 255, 0.3);
+    content: attr(data-symbol);
+    white-space: nowrap;
+    text-align: center;
 }
