--- a/web/src/Main.css
+++ b/web/src/Main.css
@@ -16,13 +16,37 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-.monospace, .code-container input, .code-container p, .ast-child, .ast-node {
+.monospace, .code-container input, .code-container p, .ast-child, .ast-node, button {
     font-family: 'Fira Code', 'Consolas', monospace;
 }
 
 h1 {
     margin-top: 5rem;
     font-size: 72px;
+}
+
+button {
+    color: white;
+    max-width: 720px;
+    margin: 2px 2px;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: 0.3s background-color ease, 0.3s box-shadow ease;
+    vertical-align: middle;
+    outline: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+button:active {
+    /* color: black; */
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 .code-container {
@@ -82,11 +106,15 @@ h1 {
     pointer-events: none;
 }
 
-.code-container p .error {
+.code-container p .highlight-error {
     border-bottom: 1.75px solid red;
 }
 
-.code-container p .error:empty::after {
+.code-container p .highlight-white {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+.code-container p .highlight-error:empty::after, .code-container p .highlight-white-bg:empty::after {
     content: ' '
 }
 
