Improve type and substitution string formatting

--- a/web/src/Main.css
+++ b/web/src/Main.css
@@ -188,7 +188,6 @@ button:active {
     text-align: center;
 }
 
-/** TODO: improve display of type derivation steps */
-p {
+.type-derivation-step p {
     white-space: pre-wrap;
 }
